--- a/show.html
+++ b/show.html
@@ -24,7 +24,7 @@
             getMain.innerHTML +=el.split(".")[0]+
                 '<br>'+
                 '<video width="800px" controls>'+
-                    '<source src="https://drive.google.com/open?id='+el+'" type="video/mp4">'+
+                    '<source src="https://drive.google.com/file/d/'+el+'/view" type="video/mp4">'+
                 '</video><br><hr width="900px"><br>'
             
         );
